ui/components/slider/base/_index.scss
// Copyright (c) 2015-present, salesforce.com, inc. All rights reserved
// Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license

@mixin range-thumb {
  appearance: none;
  width: $slider-handle-size;
  height: $slider-handle-size;
  border-radius: 50%;
  background: $slider-handle-color-background;
  border: 1px solid $slider-handle-color-border;
  box-shadow: $slider-handle-shadow;
  cursor: pointer;
  transition: background 0.15s ease-in-out;

  &:hover {
    background-color: $slider-handle-color-background-hover;
  }
}

@mixin range-track {
  width: 100%;
  height: $slider-track-height;
  cursor: pointer;
  background: $slider-track-color-background;
  border-radius: $border-radius-small;
}

/**
 * @summary Initializes slider component
 *
 * @name base
 * @selector .nds-slider
 * @restrict div
 * @variant
 */
.nds-slider {
  display: flex;
  position: relative;
}

/**
 * @summary Range track for slider
 *
 * @selector .nds-slider__range
 * @restrict input
 */
.nds-slider__range {
  appearance: none;
  width: 100%;
  margin: ($slider-handle-size / 2) 0;
  background: transparent;
  border-radius: $border-radius-small;

  &:focus {
    outline: 0;
  }

  // Webkit
  &::-webkit-slider-thumb {
    @include range-thumb;
    margin-top: calc(((#{$slider-handle-size} / 2) - (#{$slider-track-height} / 2)) * -1);
  }

  &::-webkit-slider-runnable-track {
    @include range-track;
  }

  // Firefox
  &::-moz-range-thumb {
    @include range-thumb;
  }

  &::-moz-range-track {
    @include range-track;
  }

  // IE/Edge
  &::-ms-track {
    @include range-track;
    width: 100%;
    background: transparent;
    border-color: transparent;
    color: transparent;
    cursor: pointer;
  }

  &::-ms-thumb {
    @include range-thumb;
  }

  &:focus::-webkit-slider-thumb {
    border-color: $slider-handle-color-border-focus;
    background-color: $slider-handle-color-background-focus;
    box-shadow: $slider-handle-shadow-focus;
  }

  &:active::-webkit-slider-thumb {
    border-color: $slider-handle-color-border-active;
    background-color: $slider-handle-color-background-active;
  }

  &:focus::-moz-range-thumb {
    border-color: $slider-handle-color-border-focus;
    background-color: $slider-handle-color-background-focus;
    box-shadow: $slider-handle-shadow-focus;
  }

  &:active::-moz-range-thumb {
    border-color: $slider-handle-color-border-active;
    background-color: $slider-handle-color-background-active;
  }

  &[disabled] {

    &::-webkit-slider-thumb {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }

    &::-webkit-slider-runnable-track {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }

    &::-moz-range-thumb {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }

    &::-moz-range-track {
      background-color: $slider-color-background-disabled;
    }

    &::-ms-thumb {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }

    &::-ms-track {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }
  }
}

.nds-read-only {
  .nds-slider__range {

    &::-webkit-slider-thumb {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }

    &::-webkit-slider-runnable-track {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }

    &::-moz-range-thumb {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }

    &::-moz-range-track {
      background-color: $slider-color-background-disabled;
    }

    &::-ms-thumb {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }

    &::-ms-track {
      background-color: $slider-color-background-disabled;
      cursor: default;
    }
  }
}

/**
 * @summary Element that contains value of input range
 *
 * @selector .nds-slider__value
 * @restrict .nds-slider span
 */
.nds-slider__value {
  padding: 0 $spacing-x-small;
}

/**
 * @summary Contains the label and range for the slider label - not required
 *
 * @selector .nds-slider-label
 * @restrict span
 */
.nds-slider-label {
  display: flex;
}

/**
 * @summary Contains the label for the slider and adds a hook for adding `.nds-assistive-text` class to visually hide the label, but not the range
 *
 * @selector .nds-slider-label__label
 * @restrict .nds-slider-label span
 */
.nds-slider-label__label {
  display: inline-block;
}

/**
 * @summary Contains the range for the slider
 *
 * @selector .nds-slider-label__range
 * @restrict .nds-slider-label span
 */
.nds-slider-label__range {
  // Hook for adding a11y class to hide
}

.nds-read-only {
  .nds-slider-label__range {
    color: $color-text-input-disabled;
    opacity: 0.5;
  }
}


/**
 * @summary Modifier that makes the slider vertical
 *
 * @selector .nds-slider_vertical
 * @restrict .nds-slider
 * @modifier
 */
.nds-slider_vertical {
  height: ($size-x-small + $height-input);

  .nds-slider__range {
    width: $size-x-small;
    height: $slider-handle-size;
    transform: rotate(-90deg);
    transform-origin: ($size-x-small / 2) ($size-x-small / 2);
  }

  .nds-slider__value {
    position: absolute;
    #{$left}: 0;
    bottom: 0;
    padding: 0;
  }
}

